[gd_scene load_steps=9 format=3 uid="uid://ltbiabiredt5"]

[ext_resource type="Script" path="res://ennemis/abeille.gd" id="1_6uyfj"]
[ext_resource type="Texture2D" uid="uid://deriwtfwnv7jb" path="res://images/prisme_droit_abeille.png" id="2_6sqag"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n43rt"]
size = Vector2(64, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_xgq6c"]
atlas = ExtResource("2_6sqag")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjr5x"]
atlas = ExtResource("2_6sqag")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2fp6p"]
atlas = ExtResource("2_6sqag")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5vx5"]
atlas = ExtResource("2_6sqag")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_njgs1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xgq6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjr5x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fp6p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5vx5")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="Abeille" type="Area2D" groups=["ennemis"]]
collision_layer = 2
script = ExtResource("1_6uyfj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_n43rt")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_njgs1")
autoplay = "default"
frame_progress = 0.516739

[node name="TimerVirage" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="TimerVirage" to="." method="_on_timer_virage_timeout"]
